2010-07-09  Jaroslav Hajek  <highegg@gmail.com>

	* CMatrix.cc (ComplexMatrix::lssolve (const ComplexMatrix&)):
	Undo 10708:2786b7ae3f80, implement proper correction.
	* fCMatrix.cc (FloatComplexMatrix::lssolve (const FloatComplexMatrix&)):
	Ditto.

2010-06-28  Jaroslav Hajek  <highegg@gmail.com>

	* dim-vector.h (dim_vector::scalar_1x1): New method.
	* lo-traits.h (equal_types): Fix.

2010-06-21  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::cat): Implement the loose horzcat/vertcat rules
	under dim=-1/-2.
	* Sparse.cc (Array<T>::cat): Implement the loose horzcat/vertcat rules
	under dim=-1/-2.
	* Array.h, Sparse.h: Document it.

2010-06-17  Jaroslav Hajek  <highegg@gmail.com>

	* dim-vector.cc (dim_vector::hvcat): New method.
	* dim-vector.h (dim_vector::hvcat, dim_vector::cat): Update decls.
	(dim_vector::empty_2d): New method.

2010-06-17  Jaroslav Hajek  <highegg@gmail.com>

	* MatrixType.cc (matrix_real_probe): Use OCTAVE_LOCAL_BUFFER for
	temporary array.
	(matrix_complex_probe): Parametrize by real type. Use
	OCTAVE_LOCAL_BUFFER for temporary array.

2010-06-16  Rik <octave@nomad.inbox5.com>

        * DASSL-opts.in: Periodic grammar check on documentation.

2010-06-16  David Bateman  <dbateman@free.fr>

	* oct-rand.cc (void octave_rand:do_reset (void),
	void octave_rand:do_reset (const std::string&)): New functions
	* oct-rand.h (void octave_rand:do_reset (void),
	void octave_rand:do_reset (const std::string&)): Declare them
	(void octave_rand:reset (void),
	void octave_rand:reset (const std::string&)): New functions.

2010-06-16  Jaroslav Hajek  <highegg@gmail.com>

	* CMatrix.cc (ComplexMatrix::lssolve (const ComplexMatrix&)):
	Workaround LAPACK bug.
	* fCMatrix.cc (FloatComplexMatrix::lssolve (const FloatComplexMatrix&)):
	Ditto.

2010-06-14  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array::sort, Array::nth_element): Fix behavior when
	trailing singleton dim is specified.
	* Sparse.cc (Sparse::sort): Ditto.
