@@ -1,3 +1,11 @@
+2010-07-13  Jaroslav Hajek  <highegg@gmail.com>
+
+	* MSparse.h (MSparse<T>::index): Remove overloads.
+	* dSparse.h (SparseMatrix::index): Likewise.
+	* dSparse.cc (SparseMatrix::index): Likewise.
+	* CSparse.h (SparseComplexMatrix::index): Likewise.
+	* CSparse.cc (SparseComplexMatrix::index): Likewise.
+
 2010-07-09  Jaroslav Hajek  <highegg@gmail.com>
 
 	* CMatrix.cc (ComplexMatrix::lssolve (const ComplexMatrix&)):
